k8s/nginx-ingress/staging/nginx-ingress-client.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-client
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: deny";
      more_set_headers "Referrer-Policy: same-origin";
      more_set_headers "X-Xss-Protection: 1; mode=block";
      more_set_headers "X-Content-Type-Options: nosniff";
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: client
          servicePort: 80
